issue with script link is fixed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Inbox Health | Keep Your G-Mail Clean</title>
-    <script type="text/javascript" src="scripts/controller/api.js"></script>
+    <script type="text/javascript" src="scripts/controller/api.js"></script>    
+    <script src="https://apis.google.com/js/client.js?onload=checkAuth">
+
   </head>
   <body>
     <!-- Input Field For Testing -->
