First api worked

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Inbox Health | Keep Your G-Mail Clean</title>
-    <script type="text/javascript" src="scripts/controller/api.js"></script>    
-    <script src="https://apis.google.com/js/client.js?onload=checkAuth">
+    <script type="text/javascript" src="scripts/controller/api.js"></script>
+    <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
 
   </head>
   <body>
