get message API start recieving messages parts

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   </body>
   <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
   <script type="text/javascript" src="scripts/controller/auth.js"></script>
+  <script type="text/javascript" src="scripts/controller/getMessage.js"></script>
   <script type="text/javascript" src="scripts/controller/listMessage.js"></script>
   <script src="scripts/controller/userInput.js"></script>
   <!-- <script type="text/javascript" src="scripts/controller/userOutput.js"></script> -->
