requiredInfo is been generated as supposed to

--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
   <script type="text/javascript" src="scripts/controller/getMessage.js"></script>
   <script type="text/javascript" src="scripts/controller/listMessage.js"></script>
   <script src="scripts/controller/userInput.js"></script>
-  <!-- <script type="text/javascript" src="scripts/controller/userOutput.js"></script> -->
+  <script type="text/javascript" src="scripts/controller/userOutput.js"></script>
   </html>
