--- a/home.html
+++ b/home.html
@@ -27,12 +27,12 @@
 
   <!-- //HEADER// -->
     <header>
-      <a href="index.html"><img src="img/fullLogo.png" id="fullLogo"></a>
-      <a href="index.html"><img src="img/mobile.png" id="mobileLogo"></a>
+      <a href="/"><img src="img/fullLogo.png" id="fullLogo"></a>
+      <a href="/"><img src="img/mobile.png" id="mobileLogo"></a>
       <ul id="main-nav">
-        <li>Get Started!</li>
-        <li class="full-nav">About</li>
-        <li class="full-nav">Home</li>
+        <li id="authorize-button" onclick="handleAuthClick(event)">Get Started!</li>
+        <li class="full-nav"><a href="/about">About</a></li>
+        <li class="full-nav"><a href="/">Home</a></li>
       </ul>
 
     </header>
@@ -47,7 +47,7 @@
           </div>
         </div>
 <!-- //UNSUBSCRIBE PAGE// -->
-<section>
+<section id="unsubscribe-page" class="tab-content">
         <ul>
           <li id="subscription-list-template">
             <!-- SUBSCRIPTION LIST -->
@@ -90,7 +90,7 @@
         </ul>
       </section>
 <!-- //ABOUT PAGE// -->
-<section>
+<section id="about-page" class="tab-content">
   <div class="flex-wrapper">
     <h2>About Us</h2>
     <p class="about-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -132,5 +132,11 @@
 
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
+    <script src="scripts/views/unsubscribeView.js"></script>
+    <script src="scripts/controller/aboutController.js"></script>
+    <script src="scripts/controller/homeController.js"></script>
+    <script src="scripts/controller/unsubscribeController.js"></script>
+    <script src="scripts/controller/routes.js"></script>
+
   </body>
 </html>
