--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
     <link href="styles/home.css" rel="stylesheet">
     <link href="css/header_footer.css" rel="stylesheet">
     <link href="styles/reset.css" rel="stylesheet">
@@ -146,6 +147,10 @@
     <script src="scripts/controller/unsubscribeController.js"></script>
     <script src="scripts/controller/routes.js"></script>
     <script src="scripts/views/homeView.js"></script>
-
+    <script type="text/javascript" src="scripts/controller/auth.js"></script>
+    <script type="text/javascript" src="scripts/controller/getMessage.js"></script>
+    <script type="text/javascript" src="scripts/controller/listMessage.js"></script>
+    <script src="scripts/controller/userInput.js"></script>
+    <script type="text/javascript" src="scripts/controller/userOutput.js"></script>
   </body>
 </html>
