--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <nav>
       <ul id="main-nav">
-        <li id="authorize-button" onclick="handleAuthClick(event)">Get Started!</li>
+        <li id="authorize-button" onclick="handleAuthClick(event)"><a href="/unsubscribe">Get Started!</a></li>
         <li class="full-nav"><a href="/about">About</a></li>
         <li class="full-nav"><a href="/" id="home-click">Home</a></li>
       </ul>
@@ -49,7 +49,7 @@
           <div class="text-box">
             <h1>WELCOME TO INBOX HEALTH</h1>
             <h3 class="full-nav">Less stress. More room. Unsubscribe instantly from junk mail.</h3>
-            <div id="authorize-div"><a href="/unsubscribe"><button id="authorize-button" onclick="handleAuthClick(event)">SIGN IN ></button></a></div>
+            <div id="authorize-div"><a href="/unsubscribe"><button id="authorize-button" onclick="handleAuthClick(event)">GET YOUR EMAILS ></button></a></div>
           </div>
         </div>
       </section>
