--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
   <!-- //VENDOR FILES// -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
-  <script src="https://cdn.rawgit.com/download/webdb/0.4.1/dist/webdb.min.js"></script>
     <script src="vendor/scripts/page.js"></script>
+    <script src="vendor/scripts/html5sql.js"></script>
+    <script src="vendor/scripts/webdb.js"></script>
   <!-- //MODEL FILES// -->
   <!-- //VIEW FILES// -->
   <script src="scripts/views/homeView.js"></script>
   <!-- //CONTROLLER FILES// -->
+  <script src="table.js"></script>
     <script src="scripts/controller/homeController.js"></script>
     <script src="scripts/controller/aboutController.js"></script>
     <script src="scripts/controller/unsubscribeController.js"></script>
@@ -119,6 +121,5 @@
     <script type="text/javascript" src="scripts/controller/listMessage.js"></script>
     <script src="scripts/controller/userInput.js"></script>
     <script type="text/javascript" src="scripts/controller/userOutput.js"></script>
-    <script src="table.js"></script>
   </body>
 </html>
