modified header nav order

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </div>
     <nav>
       <ul id="main-nav">
-        <li id="authorize-button" onclick="handleAuthClick(event)"><a href="/unsubscribe">Get Started!</a></li>
-        <li class="full-nav"><a href="/about">About</a></li>
         <li class="full-nav"><a href="/" id="home-click">Home</a></li>
+        <li class="full-nav"><a href="/about">About</a></li>
+        <li id="authorize-button" onclick="handleAuthClick(event)"><a href="/unsubscribe">Login</a></li>
       </ul>
     </nav>
   </header>
@@ -62,7 +62,7 @@
 <section>
   <div class="flex-wrapper">
     <h2>About Us</h2>
-    <p class="about-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p class="about-bio">Let us make your life easier with a little bit of email management - we identify your subscription emails and list them out for you. All you do is login to your Gmail account, view the list of all your subscription emails that we generate for you (do you even remember signing up for that newsletter? That coupon list? Didn’t think so), and then unsubscribe instantly from the ones you don’t need. This is a free app that will give you more space and organization in your inbox.</p>
   </div>
 </section>
 
