Created Log Out button and added fadeIn/hide functionality to it.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <nav>
       <ul id="main-nav">
-        <li id="authorize-button" onclick="handleAuthClick(event)"><a href="/unsubscribe">Get Started!</a></li>
+        <li id="logout-button">Log out</li>
         <li class="full-nav"><a href="/about">About</a></li>
         <li class="full-nav"><a href="/" id="home-click">Home</a></li>
       </ul>
