--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </head>
 
   <!-- //HEADER// -->
+
   <header>
     <div id="logos">
       <a href="/"><img src="img/fullLogo.png" id="fullLogo"></a>
@@ -35,13 +36,15 @@
     </div>
     <nav>
       <ul id="main-nav">
-        <li id="logout-button">Log out</li>
-        <li class="full-nav"><a href="/about">About</a></li>
         <li class="full-nav"><a href="/" id="home-click">Home</a></li>
+        <li class="full-nav"><a href="/about">About</a></li>
+        <li id="authorize-button" onclick="handleAuthClick(event)"><a href="/unsubscribe">Login</a></li>
       </ul>
     </nav>
   </header>
+
   <!-- //CONTENT// -->
+
   <body>
     <main>
       <section id="home-content" class="tab-content">
@@ -53,45 +56,47 @@
           </div>
         </div>
       </section>
+
 <!-- //UNSUBSCRIBE PAGE// -->
+
       <section id="unsubscribe-page" class="tab-content">
-<!-- //UNSUBSCRIBE LIST// -->
       </section>
+
 <!-- //ABOUT PAGE// -->
-<div id="about-page" class="tab-content">
-<section>
-  <div class="flex-wrapper">
-    <h2>About Us</h2>
-    <p class="about-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-</section>
 
-<div class="spacing-bar"></div>
-
-<section>
-  <div class="flex-wrapper flex-wrapper-viewport">
-    <div class="student">
-        <h3>Rae H.</h3>
-        <img src="img/raeh-bio.jpg">
-    </div>
-    <div class="student">
-      <h3>Bhavya B.</h3>
-      <img src="img/bhavyab-bio.jpg">
-    </div>
-    <div class="student">
-      <h3>Steven B.</h3>
-      <img src="img/stevenb-bio.png">
-    </div>
-    <div class="student">
-      <h3>Adrian M.</h3>
-      <img src="img/adrianm-bio.jpg">
-    </div>
-  </div>
-</section>
-</div>
-      </main>
+    <div id="about-page" class="tab-content">
+      <section>
+        <div class="flex-wrapper">
+          <h2>About Us</h2>
+            <p class="about-bio">Let us make your life easier with a little bit of email management - we identify your subscription emails and list them out for you. All you do is login to your Gmail account, view the list of all your subscription emails that we generate for you (do you even remember signing up for that newsletter? That coupon list? Didn’t think so), and then unsubscribe instantly from the ones you don’t need. This is a free app that will give you more space and organization in your inbox.</p>
+        </div>
+      </section>
+      <div class="spacing-bar"></div>
+        <section>
+          <div class="flex-wrapper flex-wrapper-viewport">
+            <div class="student">
+              <h3>Rae H.</h3>
+              <img src="img/raeh-bio.jpg">
+            </div>
+            <div class="student">
+              <h3>Bhavya B.</h3>
+              <img src="img/bhavyab-bio.jpg">
+            </div>
+            <div class="student">
+              <h3>Steven B.</h3>
+              <img src="img/stevenb-bio.png">
+            </div>
+            <div class="student">
+              <h3>Adrian M.</h3>
+              <img src="img/adrianm-bio.jpg">
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
 
 <!-- //FOOTER// -->
+
     <footer>
       <ul id="links">
         <li>Home</li>
@@ -99,17 +104,22 @@
         <li>Blog</li>
       </ul>
       <h3>&#169 2016 Inbox Health Inc. All rights reserved.</h3>
-
     </footer>
+
   <!-- //VENDOR FILES// -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
     <script src="vendor/scripts/page.js"></script>
+
     <script src="vendor/scripts/html5sql.js"></script>
     <script src="vendor/scripts/webdb.js"></script>
   <!-- //MODEL FILES// -->
+
   <!-- //VIEW FILES// -->
-  <script src="scripts/views/homeView.js"></script>
+
+    <script src="scripts/views/homeView.js"></script>
+
   <!-- //CONTROLLER FILES// -->
   <script src="table.js"></script>
     <script src="scripts/controller/homeController.js"></script>
