Added delegated event handler to remove unsubscribelink

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <p>{{senderName}}</p>
             </div> <!-- name-container -->
             <div class="unsub-container">
-              <a href="{{unsubscribe}}" target="_blank"><span class="icon-cross">Unsubscribe</span></a>
+              <span data-link="{{unsubscribe}}" class="icon-cross">Unsubscribe</span>
             </div> <!-- .unsub-container -->
           </div> <!-- .flex-container -->
         </li>
