--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <p>{{senderName}}</p>
             </div> <!-- name-container -->
             <div class="unsub-container">
-              <span data-link="{{unsubscribe}}" class="icon-cross">Unsubscribe</span>
+              <a data-link="{{unsubscribe}}" href="{{unsubscribe}}" target="_blank" class="icon-cross">Unsubscribe</a>
             </div> <!-- .unsub-container -->
           </div> <!-- .flex-container -->
         </li>
