--- a/index.html
+++ b/index.html
@@ -2,28 +2,23 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
-    <link href="styles/reset.css" rel="stylesheet">
-    <link href="styles/home.css" rel="stylesheet">
-    <link href="css/header_footer.css" rel="stylesheet">
+    <link href="vendor/styles/reset.css" rel="stylesheet">
+    <link href="vendor/styles/icons.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/layout.css" rel="stylesheet">
     <link href="styles/modules.css" rel="stylesheet">
-    <link href="styles/icons.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
     <script id="unsubscribe-template" type="text/x-handlebars-template">
-      <ul>
         <li>
           <div class="flex-container">
             <div class="name-container">
               <p>{{senderName}}</p>
-            </div> <!-- name-container -->
+            </div>
             <div class="unsub-container">
-              <a data-link="{{unsubscribe}}" href="{{unsubscribe}}" target="_blank" class="icon-cross">Unsubscribe</a>
-            </div> <!-- .unsub-container -->
-          </div> <!-- .flex-container -->
-        </li>
-      </ul>
+              <a href="{{unsubscribe}}" target="_blank" class="icon-cross">Unsubscribe</a>
+            </div>
+          </div>
+       </li>
     </script>
   </head>
 
@@ -60,6 +55,7 @@
 <!-- //UNSUBSCRIBE PAGE// -->
 
       <section id="unsubscribe-page" class="tab-content">
+        <ul></ul>
       </section>
 
 <!-- //ABOUT PAGE// -->
@@ -98,15 +94,15 @@
 <!-- //FOOTER// -->
 
     <footer>
-      <h3>&#169 2016 Inbox Health Inc. All rights reserved.</h3>
+      <!-- <h3>&#169 2016 Inbox Health Inc. All rights reserved.</h3> -->
     </footer>
 
   <!-- //VENDOR FILES// -->
 
+    <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
     <script src="vendor/scripts/page.js"></script>
-
     <script src="vendor/scripts/html5sql.js"></script>
     <script src="vendor/scripts/webdb.js"></script>
   <!-- //MODEL FILES// -->
