finished cleaning up html

--- a/index.html
+++ b/index.html
@@ -60,13 +60,12 @@
 
 <!-- //ABOUT PAGE// -->
 
-    <div id="about-page" class="tab-content">
-      <section>
-        <div class="flex-wrapper">
-          <h2>About Us</h2>
-            <p class="about-bio">Let us make your life easier with a little bit of email management - we identify your subscription emails and list them out for you. All you do is login to your Gmail account, view the list of all your subscription emails that we generate for you (do you even remember signing up for that newsletter? That coupon list? Didn’t think so), and then unsubscribe instantly from the ones you don’t need. This is a free app that will give you more space and organization in your inbox.</p>
-        </div>
-      </section>
+      <div id="about-page" class="tab-content">
+      <div class="flex-wrapper">
+        <h2>About Us</h2>
+        <p class="about-bio">Let us make your life easier with a little bit of email management - we identify your subscription emails and list them out for you. All you do is login to your Gmail account, view the list of all your subscription emails that we generate for you (do you even remember signing up for that newsletter? That coupon list? Didn’t think so), and then unsubscribe instantly from the ones you don’t need. This is a free app that will give you more space and organization in your inbox.
+        </p>
+      </div>
       <div class="spacing-bar"></div>
         <section>
           <div class="flex-wrapper flex-wrapper-viewport">
@@ -110,7 +109,7 @@
   <!-- //VIEW FILES// -->
 
   <!-- //CONTROLLER FILES// -->
-  <script src="table.js"></script>
+    <script src="table.js"></script>
     <script src="scripts/controller/homeController.js"></script>
     <script src="scripts/controller/aboutController.js"></script>
     <script src="scripts/controller/unsubscribeController.js"></script>
