--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
     <script src="vendor/scripts/html5sql.js"></script>
     <script src="vendor/scripts/webdb.js"></script>
   <!-- //MODEL FILES// -->
+    <script src="scripts/model/table.js"></script>
     <script type="text/javascript" src="scripts/model/getMessage.js"></script>
     <script type="text/javascript" src="scripts/model/listMessage.js"></script>
 
   <!-- //VIEW FILES// -->
     <script type="text/javascript" src="scripts/view/appendTable.js"></script>
   <!-- //CONTROLLER FILES// -->
-    <script src="table.js"></script>
     <script src="scripts/controller/homeController.js"></script>
     <script src="scripts/controller/aboutController.js"></script>
     <script src="scripts/controller/unsubscribeController.js"></script>
