Added in Bhavya's about me. And removed icon-cross icon.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>{{senderName}}</p>
           </div>
           <div class="unsub-container">
-            <a href="{{unsubscribe}}" target="_blank" class="icon-cross">Unsubscribe</a>
+            <a href="{{unsubscribe}}" target="_blank">Unsubscribe</a>
           </div>
         </div>
      </li>
@@ -78,7 +78,7 @@
               <div class="student">
                 <h3>Bhavya B.</h3>
                 <img src="img/bhavyab-bio.jpg">
-                <p>Rae Helsel grew up in Wenatchee, WA, but calls Seattle home. She started intro web design classes in her graduate degree for photography, and then decided to pursue it more thoroughly with Code Fellows in August, 2016. All her spare time includes yoga, coffee, and music.</p>
+                <p>Bhavya grewup in India, moves to seattle in 2012.  She started persuing web developer career  with code fellows in 2016.  Her spare time includes music, yummy food.</p>
               </div>
               <div class="student">
                 <h3>Steven B.</h3>
