delete file tried to generate

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="text-box">
               <h1>WELCOME TO INBOX HEALTH</h1>
               <h3 class="full-nav">Less stress. More room. Unsubscribe instantly from junk mail.</h3>
-              <div id="authorize-div"><a href="/unsubscribe"><button id="authorize-button" onclick="auth.handleAuthClick(event)">GET YOUR EMAILS ></button></a></div>
+              <div id="authorize-div"><a href="/unsubscribe"><button id="authorize-button" onclick="auth.handleAuthClick(event)">GET YOUR EMAILS</button></a></div>
             </div>
           </div>
         </section>
@@ -103,6 +103,7 @@
 
     <script src="https://apis.google.com/js/client.js?onload=auth.checkAuth"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
     <script src="vendor/scripts/page.js"></script>
     <script src="vendor/scripts/html5sql.js"></script>
