webDB file added not working as expexted

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <script src="vendor/scripts/webdb.js"></script>
   <!-- //MODEL FILES// -->
     <script src="scripts/model/table.js"></script>
+    <script src="scripts/model/senderIdsTable.js"></script>
     <script type="text/javascript" src="scripts/model/getMessage.js"></script>
     <script type="text/javascript" src="scripts/model/listMessage.js"></script>
     <script type="text/javascript" src="scripts/model/listMessageDelete.js"></script>
