--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           </div>
           <div class="unsub-container">
             <a href="{{unsubscribe}}" target="_blank" class="icon-cross">Unsubscribe</a>
-            <button id='{{senderName}}' class='delete'>Delete</button>
+            <button id='{{from}}' class='delete'>Delete</button>
           </div>
         </div>
      </li>
